Fix ring not visible on Safari iOS

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,11 +11,11 @@
 }
 
 .input {
-  @apply p-2 ring ring-2 ring-slate-200 ring-inset rounded focus:outline-none focus:ring-blue-200;
+  @apply appearance-none p-2 ring ring-2 ring-slate-200 ring-inset rounded focus:outline-none focus:ring-blue-200;
 }
 
 .button {
-  @apply p-2 self-stretch rounded text-white bg-sky-400 hover:bg-sky-500 active:bg-sky-600;
+  @apply appearance-none p-2 self-stretch rounded text-white bg-sky-400 hover:bg-sky-500 active:bg-sky-600;
 }
 
 .pre {
